tests/fixtures/invalid/extern_unresolved_alias.gcl
// error: `other` is not a plugin or module alias in scope
import plugin "graphcal:demo" as demo {
    fn lerp<D>(a: D, b: D, t: Dimensionless) -> D;
}
node x: Dimensionless = other.lerp(1.0, 2.0, 0.5);
